<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".example.LoggedInActivity">

    <TextView
        android:id="@+id/loggedInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/logged_in_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/buttonsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loggedInText">

        <Button
            android:id="@+id/profileDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetch_profile_data_button" />

        <Button
            android:id="@+id/sessionExchangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_session_exchange_button" />

        <Button
            android:id="@+id/testRetrofitAuthenticatedRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_authenticated_request" />

        <Button
            android:id="@+id/accountPagesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_pages_button" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>